[gd_scene load_steps=7 format=3 uid="uid://c7ar5m3koxa66"]

[ext_resource type="Shader" uid="uid://c03nohjd3t80e" path="res://Assets/Shaders/Rainbow.gdshader" id="1_pmgnq"]
[ext_resource type="Texture2D" uid="uid://bbm2tuu76q74k" path="res://Assets/Sprites/Player/GaugeBackground.png" id="2_ydjoo"]
[ext_resource type="Texture2D" uid="uid://cdn7p8yadax3u" path="res://Assets/Sprites/Player/GaugeProgress.png" id="3_1reen"]
[ext_resource type="Script" uid="uid://cpnb6lrxqm4bf" path="res://Scripts/Player/BoostBar.gd" id="4_ydjoo"]
[ext_resource type="AudioStream" uid="uid://cnul5ebcwjexq" path="res://Assets/SFX/FullBoost.wav" id="5_1reen"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1e6p3"]
shader = ExtResource("1_pmgnq")
shader_parameter/can_boost_color = Color(1, 1, 1, 1)
shader_parameter/no_boost_color = Color(0.3, 0.3, 0.3, 1)
shader_parameter/can_boost = false
shader_parameter/is_full = false

[node name="BoostBar" type="TextureProgressBar"]
material = SubResource("ShaderMaterial_1e6p3")
offset_right = 32.0
offset_bottom = 32.0
pivot_offset = Vector2(16, 16)
fill_mode = 4
texture_under = ExtResource("2_ydjoo")
texture_progress = ExtResource("3_1reen")
script = ExtResource("4_ydjoo")

[node name="OverchargeBoostBar" type="TextureProgressBar" parent="."]
visible = false
show_behind_parent = true
material = SubResource("ShaderMaterial_1e6p3")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(16, 16)
min_value = 100.0
max_value = 200.0
value = 100.0
allow_lesser = true
fill_mode = 4
texture_progress = ExtResource("3_1reen")

[node name="FullBoostAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-48, -72)
stream = ExtResource("5_1reen")
volume_db = -10.0
bus = &"SFX"
